libmbim-glib: Increase the retry interval to 5 seconds.

Sierra Mobile Broadband EM7455 won't work while the retry interval is
only one second.

https://bugs.freedesktop.org/show_bug.cgi?id=91189

Signed-off-by: Shih-Yuan Lee (FourDollars) <sylee@canonical.com>